--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=financial-ledger
 
-spring.profiles.active=%{SPRING_PROFILES_ACTIVE:dev}
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
